--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+                <!-- first page -- navbar and hero-section -->
+
     <div class="container">
       <nav>
         <img src="./images/Logo.png" alt="logo" />
@@ -43,6 +45,7 @@
         </div>
       </section>
 
+<!--second page -- -->
       <section class="stats">
         <h1>We Connect your business with your target</h1>
         <div class="stats-data-container">
@@ -65,6 +68,7 @@
         </div>
         <img src="./images/stats-img.jpg" alt="stats" />
       </section>
+<!-- third page -- features section -->
 
       <section class="feature">
         <h1>We have made you care easy for you</h1>
