--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-                <!-- first page -- navbar and hero-section -->
+    <!-- first page -- navbar and hero-section -->
 
     <div class="container">
       <nav>
@@ -45,7 +45,7 @@
         </div>
       </section>
 
-<!--second page -- -->
+      <!--second page -- -->
       <section class="stats">
         <h1>We Connect your business with your target</h1>
         <div class="stats-data-container">
@@ -68,7 +68,7 @@
         </div>
         <img src="./images/stats-img.jpg" alt="stats" />
       </section>
-<!-- third page -- features section -->
+      <!-- third page -- features section -->
 
       <section class="feature">
         <h1>We have made you care easy for you</h1>
@@ -118,7 +118,7 @@
           <img src="./images/feature-three-img.jpg" alt="" />
         </div>
       </section>
-
+      <!-- fourth page -- teams-section -->
       <section class="teams">
         <div class="teams-content">
           <h1>Meet Our Great Creative Teams</h1>
@@ -155,7 +155,7 @@
         </div>
         <button class="btn team-button">See More</button>
       </section>
-
+      <!-- last page -- footer-section -->
       <footer>
         <div class="nav-bottom">
           <img src="./images/Logo.png" alt="logo" />
